@@ -1,10 +1,11 @@
-<div id="globalstatusmessage" i18n:domain="ftw.globalstatusmessage" xmlns:tal="http://xml.zope.org/namespaces/tal"
-xmlns:metal="http://xml.zope.org/namespaces/metal"
-    tal:define ="gsm_props python:context.portal_properties.get('ftw_globalstatusmessage_properties', False);
-                 active python: gsm_props and gsm_props.getProperty('Active', False);
-                 type python: gsm_props and gsm_props.getProperty('Type', 'error');
-                 message python: gsm_props and gsm_props.getProperty('Message');
-                 title python: gsm_props and gsm_props.getProperty('Title')"
+<div id="globalstatusmessage" i18n:domain="ftw.globalstatusmessage"
+    xmlns:metal="http://xml.zope.org/namespaces/metal"
+    xmlns:tal="http://xml.zope.org/namespaces/tal"
+    tal:define="settings view/settings;
+                active settings/enabled_bool;
+                type settings/type_choice;
+                title settings/title_textfield;
+                message settings/message_textfield"
     tal:condition="active">
     <dl class="" tal:attributes="class string: portalMessage ${type}">
         <dt tal:content= "title">Attention</dt>
