@@ -53,8 +53,11 @@ setup(name='ftw.globalstatusmessage',
         'Products.GenericSetup',
         'Zope2',
         'ftw.upgrade',
+        'plone.api',
         'plone.app.form',
         'plone.app.layout',
+        'plone.app.registry',
+        'plone.directives.form',
         'plone.z3cform',
         'setuptools',
         'z3c.form',
