@@ -5,7 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Configlet was migrated to plone.app.registry (closes #13).
+  [hvelarde]
 
 
 1.3.0 (2014-05-14)
